add margin to divs

--- a/timer.html
+++ b/timer.html
@@ -8,6 +8,10 @@
             height: 30px;
             margin: 3px;
         }
+
+        div {
+            margin: 3px;
+        }
     </style>
 </head>
 
